# pbg-yalla

./: .gitignore  NEXT_STEPS.md  README.md  index.html  pyproject.toml  workspace.yaml
.pbg/schemas/: investigation.schema.json  study.schema.json
colab/: try_real_yalla.ipynb
demo/: composite_report.py  demo_report.py  yalla-springs-demo-report.html  yalla-springs-with-viz-report.html
pbg_yalla/: __init__.py  composites.py  force_kernels.py  inits.py  processes.py  reproduction.py  summary.py  visualizations.py  yalla_native.py
pbg_yalla/composites/: __init__.py  yalla-real-springs.composite.yaml  yalla-springs-demo.composite.yaml  yalla-springs-with-viz.composite.yaml
reports/: index.html
tests/: test_composites.py  test_processes.py  test_reproduction.py  test_yalla_bridge.py
