[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbg-yalla"
version = "0.1.0"
description = "Process-bigraph wrapper for a yalla-style pair-wise agent-based morphogenesis simulator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "process-bigraph>=0.0.10",
    "bigraph-schema",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest", "matplotlib", "bigraph-viz"]

[tool.setuptools.packages.find]
include = ["pbg_yalla*"]
