[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbg-yalla"
version = "0.1.0"
description = "Process-bigraph wrapper for a yalla-style pair-wise agent-based morphogenesis simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "process-bigraph>=0.0.10",
    "bigraph-schema",
    "pbg-superpowers",
    "pyyaml",
    "numpy",
    "bigraph-viz>=2.0.3",
    "jsonschema[format-nongpl]>=4.21",
    "jinja2>=3.1",
    "pypdf>=4.0",
    "matplotlib",
    "plotly",
    "vivarium-dashboard",
]

[project.optional-dependencies]
dev = ["pytest", "matplotlib", "bigraph-viz"]

[tool.uv.sources]
vivarium-dashboard = { git = "https://github.com/vivarium-collective/vivarium-dashboard.git", branch = "main" }
pbg-superpowers = { git = "https://github.com/vivarium-collective/pbg-superpowers.git", branch = "main" }

[tool.setuptools.packages.find]
include = ["pbg_yalla*"]
